@@ -1,13 +1,10 @@
 package online.javafun.movieclub.storage;
 
-import org.apache.commons.io.FilenameUtils;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -15,54 +12,33 @@ import java.nio.file.StandardCopyOption;
 
 @Service
 public class FileStorageService {
-    private final String fileStorageLocation;
-    private final String imageStorageLocation;
+    private final Path fileStorageLocation;
 
-    public FileStorageService(@Value("${app.storage.location}") String fileStorageLocation) throws FileNotFoundException {
-        this.fileStorageLocation = fileStorageLocation + "/files/";
-        this.imageStorageLocation = fileStorageLocation + "/img/";
-        Path fileStoragePath = Path.of(fileStorageLocation);
-        checkDirectoryExists(fileStoragePath);
-        Path imageStoragePath = Path.of(imageStorageLocation);
-        checkDirectoryExists(imageStoragePath);
-    }
+    public FileStorageService(FileStorageProperties fileStorageProperties) throws FileStorageException {
+        this.fileStorageLocation = Paths.get(fileStorageProperties.getUploadDir())
+                .toAbsolutePath().normalize();
 
-    private void checkDirectoryExists(Path path) throws FileNotFoundException {
-        if (Files.notExists(path)) {
-            throw new FileNotFoundException("Directory %s does not exist.".formatted(path.toString()));
-        }
-    }
-
-    public String saveImage(MultipartFile image) {
-        return saveFiles(image, imageStorageLocation);
-    }
-
-    public String saveFile(MultipartFile file) {
-        return saveFiles(file, fileStorageLocation);
-    }
-
-    private String saveFiles(MultipartFile file, String storageLocation) {
-        Path filePath = createFilePath(file, storageLocation);
         try {
-            Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
-            return filePath.getFileName().toString();
-        } catch (IOException e) {
-            throw new UncheckedIOException(e);
+            Files.createDirectories(this.fileStorageLocation);
+        } catch (Exception e) {
+            throw new FileStorageException("Could not create the directory where the uploaded files will be stored", e);
         }
     }
 
-    private Path createFilePath(MultipartFile file, String storageLocation) {
-        String originalFileName = file.getOriginalFilename();
-        String fileBaseName = FilenameUtils.getBaseName(originalFileName);
-        String fileExtension = FilenameUtils.getExtension(originalFileName);
-        String completeFilename;
-        Path filePath;
-        int fileIndex = 0;
-        do {
-            completeFilename = fileBaseName + fileIndex + "." + fileExtension;
-            filePath = Paths.get(storageLocation, completeFilename);
-            fileIndex++;
-        } while (Files.exists(filePath));
-        return filePath;
+    public String storeFile(MultipartFile file) {
+        String fileName = StringUtils.cleanPath(file.getOriginalFilename());
+
+        try {
+            if (fileName.contains("..")) {
+                throw new FileStorageException("Sorry! Filename contains invalid path sequence " + fileName);
+            }
+
+            Path targetLocation = this.fileStorageLocation.resolve(fileName);
+            Files.copy(file.getInputStream(), targetLocation, StandardCopyOption.REPLACE_EXISTING);
+
+            return fileName;
+        } catch (IOException e) {
+            throw new FileStorageException("Could not store file " + fileName + ". Please try again!", e);
+        }
     }
 }
